[package]
name = "invaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bumpalo = { version = "3.11.1", features = ["boxed", "collections"] }
env_logger = "0.10.0"
glfw = "0.49.1"
log = "0.4.17"
thiserror = "1.0.38"
