[package]
name = "invaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
env_logger = "0.10.0"
futures-lite = "1.12.0"
glam = { version = "0.22.0", features = ["fast-math"] }
glfw = "0.49.1"
log = "0.4.17"
raw-window-handle = "0.5.0"
thiserror = "1.0.38"
wgpu = "0.15.0"
